[build-system]
requires = [
  "setuptools",
  "pybind11~=2.11.1",
  "cmake>=3.13",
  "delvewheel; sys_platform == 'win32'",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
test-requires = [
    "pytest",
    "pytest-xdist",
    "stim~=1.15",
    "sinter",
    "pygltflib",
]
test-command = "pytest -n auto {project}/src"

[tool.cibuildwheel.windows]
repair-wheel-command = 'delvewheel repair -v --add-path "dist;." -w {dest_dir} {wheel}'

[tool.cibuildwheel.windows.environment]
CARGO_BUILD_TARGET = "aarch64-pc-windows-msvc"
SETUPTOOLS_USE_DISTUTILS = "local"

[tool.check-wheel-contents]
# Our binary wheels have 2 toplevel directories.
ignore = ["W009", "W010"]
