# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = [
  "setuptools",
  "pybind11~=2.11.1",
  "cmake>=3.13",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
test-requires = [
    "pytest",
    "pytest-xdist",
    "stim~=1.15",
    "sinter",
    "pygltflib",
]
test-command = "pytest -n auto {project}/src"

[tool.cibuildwheel.windows]
before-build = "pip install delvewheel"
repair-wheel-command = 'delvewheel repair -v --add-path "dist;." -w {dest_dir} {wheel}'

[tool.cibuildwheel.windows.environment]
SETUPTOOLS_USE_DISTUTILS = "local"
